k8s/api-server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: web
  labels:
    app: demo-man
    svc: api
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: api
  template:
    metadata:
      labels:
        app: demo-man
        svc: api
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: api
        image: registry.git.rwth-aachen.de/occloxium-webdev/demo-zoomoid-de/api:2.0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "300m"
