k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-api
  namespace: web
  labels:
    app: demo-man
    svc: api
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: api
  template:
    metadata:
      labels:
        app: demo-man
        svc: api
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: api
        image: registry.git.rwth-aachen.de/occloxium-webdev/demo-zoomoid-de/api:v1.14.6
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "100m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-waveman
  namespace: web
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: waveman
  template:
    metadata:
      labels:
        app: demo-man
        svc: waveman
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: waveman
        image: registry.git.rwth-aachen.de/occloxium-webdev/demo-zoomoid-de/waveman:v1.14.7
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: audio-volume
          mountPath: "/app/files"
        - name: waveman-config
          mountPath: /app/config
        resources:
          limits:
            memory: "1Gi"
          requests:
            cpu: "500m"
      volumes:
      - name: audio-volume
        persistentVolumeClaim:
          claimName: demo-audio-pvc
      - name: waveman-config
        configMap:
          name: demo-waveman-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-client
  namespace: web
  labels:
    svc: client
    app: demo-man
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: client
  template:
    metadata:
      labels:
        app: demo-man
        svc: client
    spec:
      restartPolicy: Always
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: client
        image: registry.git.rwth-aachen.de/occloxium-webdev/demo-zoomoid-de/client:v1.14.6
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-watchdog
  namespace: web
  labels:
    app: demo-man
    svc: watchdog
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: watchdog
  template:
    metadata:
      labels:
        app: demo-man
        svc: watchdog
    spec:
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: watchdog
        image: registry.git.rwth-aachen.de/occloxium-webdev/demo-zoomoid-de/watchdog:v1.14.6
        volumeMounts:
        - mountPath: "/app/files"
          name: audio-volume
      volumes:
      - name: audio-volume
        persistentVolumeClaim:
          claimName: demo-audio-pvc
      restartPolicy: Always
