k8s/watchdog.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-watchdog
  namespace: web
  labels:
    app: demo-man
    svc: watchdog
spec:
  selector:
    matchLabels:
      app: demo-man
      svc: watchdog
  template:
    metadata:
      labels:
        app: demo-man
        svc: watchdog
    spec:
      imagePullSecrets:
      - name: github
      - name: gitlab
      containers:
      - name: watchdog
        imagePullPolicy: Always
        image: registry.git.rwth-aachen.de/occloxium-webdev/demo-zoomoid-de/watchdog:latest
        volumeMounts:
        - mountPath: "/app/files"
          name: audio-volume
        resources:
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
      - name: audio-volume
        persistentVolumeClaim:
          claimName: demo-audio-pvc
      restartPolicy: Always
