k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-api
  namespace: web
spec:
  selector:
    app: demo-api
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-client
  namespace: web
spec:
  selector:
    app: demo-client
  ports:
  - port: 8081
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: web
  name: demo-mongodb
spec:
  selector:
    app: demo-mongodb
  ports:
  - port: 27017
    targetPort: 27017
