k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-zoomoid-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - demo.zoomoid.de
    secretName: demo-zoomoid-tls
  rules:
  - host: demo.zoomoid.de
    http:
      paths:
      - path: /
        backend:
          serviceName: demo-client-svc
          servicePort: 80
      - path: /api
        backend:
          serviceName: demo-api-svc
          servicePort: 80
